[tool.poetry]
name = "tools"
version = "0.0.0"
description = "Set up development environment."
authors = ["Don Nguyen <ndon55555@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.2"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
